<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Paling atas berwarna hijau dengan tulisan E-Ridi -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_ridi"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="18dp"
            android:gravity="center_vertical" />

    </LinearLayout>

    <!-- Selamat datang di E-Ridi -->
    <ImageView
        android:id="@+id/welcome_image_view"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_below="@id/main_layout"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/background_image_for_welcome_message"
        android:src="@drawable/selamat_datang"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_image_view"/>

    <!-- 5 Opsi -->
    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text_view"
        android:orientation="vertical"
        android:padding="18dp">

        <Button
            android:id="@+id/cek_padiku_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:text="@string/cek_padiku"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/info_penyakit_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:text="Info Tanaman Padi"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bantuan_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:text="@string/bantuan"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/keluar_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:text="@string/keluar"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>